# project

./: Cargo.toml  README.md  index.html
src/: Home.rs  index.html  main.rs  styles.css  to_do.rs
static/: index.html  latest.html  support.html
static/css/: styles.css
static/js/: app.js
