[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
async-std = "1.12.0"
async-trait = "0.1.81"
env_logger = "0.11.5"
file = "1.1.2"
futures = "0.3.30"
join = "0.3.1"
log = "0.4.22"
reqwest = "0.12.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
threadpool = "1.8.1"
tokio = { version = "1.39.2", features = ["fs", "full", "io-std"] }
warp = "0.3.7"
